--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -46,6 +46,17 @@ img {
   display: flex;
 }
 
+// scss-lint:disable VendorPrefixes, PropertySortOrder
+%flex-center-inline {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+
 %flex-container {
   display: -webkit-box;
   display: -ms-flexbox;
